Version 0.2-4:

  - provide dimnames() getter and setter methods for DSM objects
  - provide as.matrix() method for DSM objects (which extracts either M or S)

Version 0.2-3:

  - context.vectors() now also accepts weighted bag-of-words representations as context specification; direct indexing into M has been deprecated
  - normalize.rows() also supports Minkowski norms with p < 1 (which are known as k-norms, for k=p), but rejects p < .05 due to numerical instability
  - normalize.rows() preserves all-zero row vectors; rows with very small norm are explicitly set to zero instead of attempting to normalize them 

Version 0.2-2:

  - dsm.score() can now also be abused for collocation analysis with negative.ok="nonzero" (using a sparse DSM to represent a co-occurrence data set)
  - new association measures log-likelihood and chi-squared (with Yates correction); more thorough unit tests of dsm.score()
  - dist.matrix() offers two new similarity measures: the generalized Jaccard coefficient (which can be converted into a metric) and an asymmetric measure of overlap
 
Version 0.2-1:

  - dsm.score() now supports user-defined association measures, which are automatically evaluated in batches to reduce memory overhead compared to a naive vectorized implementation
  - as.distmat() marks an arbitrary matrix as a pre-computed dist.matrix object, so it can be used for lookup with nearest.neighbours() and pair.distances()
  - nearest.neighbours() improved to support lookup in sparse pre-computed distance matrix
  - pair.distances() improved to support lookup (and calculation of neighbour ranks) in a pre-computed distance matrix
  - more efficient implementation of nonzero counts using "Hamming length" (Minkowski p=0)
    - naive implementation rowSums(M != 0) involves temporary logical matrix, stored as 32-bit integers
    - rowSums/colSums in Matrix package additionally converts lgcMatrix into a matrix of doubles (dgCMatrix), resulting in huge memory overhead