@@ -1,6 +1,6 @@
 importFrom(methods, as, is, new)
 importFrom(stats, cor.test, lowess, na.omit, quantile, rbinom, rnorm)
-importFrom(utils, combn, read.delim, type.convert)
+importFrom(utils, combn, read.delim, write.table, type.convert)
 importFrom(graphics, legend, lines, par, plot, points, segments, text)
 importFrom(grDevices, extendrange)
 importFrom(MASS, sammon, isoMDS)
@@ -18,6 +18,7 @@ export(wordspace.openmp)
 export(dsm, check.dsm)
 export(dsm.is.canonical, dsm.canonical.matrix)
 export(read.dsm.ucs, read.dsm.triplet)
+export(write.dsm.matrix)
 export(dsm.score)
 export(rowNorms, colNorms, normalize.rows, normalize.cols, scaleMargins)
 export(rsvd)
